Kubernetes/Project/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api-app
          image: docker.io/sreesiri2docker/simple_blog_api
          resources:
             limits:
                 memory: "128Mi"
                 cpu: "500m"   
          ports:
            - containerPort: 3000
