Kubernetes/Project/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
         - name: postgres-storage
           persistentVolumeClaim:
               claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: docker.io/postgres
          resources:
             limits:
                 memory: "128Mi"
                 cpu: "500m"   
          ports:
            - containerPort: 5432
          volumeMounts:
              - name: postgres-storage
                mountPath: /var/lib/postgresql/data
                subPath: postgres
